# ChangeLog for app-arch/cpio
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/cpio/ChangeLog,v 1.51 2006/11/11 06:58:30 vapier Exp $

*cpio-2.7-r1 (11 Nov 2006)

  11 Nov 2006; Mike Frysinger <vapier@gentoo.org>
  +files/cpio-2.7-link-terminate.patch, +cpio-2.7-r1.ebuild:
  Grab fix from upstream for #153782 by Brian S. Stephan.

*cpio-2.7 (21 Oct 2006)

  21 Oct 2006; Mike Frysinger <vapier@gentoo.org> +cpio-2.7.ebuild:
  Version bump.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> cpio-2.6-r5.ebuild:
  Added ~sparc-fbsd keyword.

  30 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> cpio-2.6-r5.ebuild:
  Add ~x86-fbsd keyword.

  18 Feb 2006; Mike Frysinger <vapier@gentoo.org>
  +files/cpio-2.6-stpcpy-hack.patch, cpio-2.6-r5.ebuild:
  Fix by Benigno B. Junior for building on *BSD systems #123237.

  25 Dec 2005; Joshua Kinard <kumba@gentoo.org> cpio-2.6-r5.ebuild:
  Marked stable on mips.

  04 Dec 2005; Michael Hanselmann <hansmi@gentoo.org> cpio-2.6-r5.ebuild:
  Stable on ppc.

  03 Dec 2005; Simon Stelling <blubb@gentoo.org> cpio-2.6-r5.ebuild:
  stable on amd64 wrt bug 112140

  02 Dec 2005; Fernando J. Pereda <ferdy@gentoo.org> cpio-2.6-r5.ebuild:
  stable on alpha wrt bug #112140

  02 Dec 2005; Andrej Kacian <ticho@gentoo.org> cpio-2.6-r5.ebuild:
  Stable on x86, security bug #112140.

  02 Dec 2005; Fabian Groffen <grobian@gentoo.org> cpio-2.6-r5.ebuild:
  Marked ppc-macos (bug #112140)

  02 Dec 2005; Markus Rothe <corsair@gentoo.org> cpio-2.6-r5.ebuild:
  Stable on ppc64; bug #112140

  01 Dec 2005; Gustavo Zacarias <gustavoz@gentoo.org> cpio-2.6-r5.ebuild:
  Stable on sparc wrt #112140

*cpio-2.6-r5 (01 Dec 2005)

  01 Dec 2005; Mike Frysinger <vapier@gentoo.org>
  +files/cpio-2.6-checksum.patch, +files/cpio-2.6-warnings.patch,
  +files/cpio-2.6-writeOutHeaderBufferOverflow.patch, +cpio-2.6-r5.ebuild:
  Grab fixes from Fedora to resolve buffer overflow #112140.
