@@ -48,18 +48,18 @@ RMD160 1b2bf69ec397c73a802527e34537252f306a8d76 files/cpio-2.7-link-terminate.pa
 SHA256 3a868339b78d4bb66c7efb1d0bfdd70a5c5ecd48ac6a7ba2fe60097f308fccba files/cpio-2.7-link-terminate.patch 542
 DIST cpio-2.6.tar.bz2 448452 RMD160 52b7e21c9989dd28da5dae1630b57a301817a788 SHA1 4f65821ec10eb2c330a582fbc8112960c9849ecd SHA256 6e60c5c370d451605fcb23e26cc37c18182f62009282ca73bf5dea4519e17360
 DIST cpio-2.7.tar.bz2 698221 RMD160 0ae35717237133da5bba18376af0ec685ac67360 SHA1 ce1c8ab703d62fc1d30ca59e044ba9f43c3db574 SHA256 b59390450233b5298d210f6369e98d91d07b7f4261ddb962d654185dd02b5b0e
-EBUILD cpio-2.6-r5.ebuild 1623 RMD160 b331a1459f59f7b2007fc7c5104d757a08b2bdb9 SHA1 82e6c6d878d6f8534456abd96239fc5b37524be0 SHA256 a219d91b9e1a77c3f7eb557489d86e1ec2a7128ac276c36e9d66d845ae7db2c0
-MD5 f0ffea4dccba13fcb2196d4f6728a082 cpio-2.6-r5.ebuild 1623
-RMD160 b331a1459f59f7b2007fc7c5104d757a08b2bdb9 cpio-2.6-r5.ebuild 1623
-SHA256 a219d91b9e1a77c3f7eb557489d86e1ec2a7128ac276c36e9d66d845ae7db2c0 cpio-2.6-r5.ebuild 1623
-EBUILD cpio-2.7-r1.ebuild 953 RMD160 cc3c6c7640218f6c75d19643e522d9caca7de9de SHA1 ff98300c935707b0f529a871499e8324894d2010 SHA256 0604e25d4a23d82eadb4624ef39e6a76206a1000633f81d0fec66d6bae9f424c
-MD5 21d603bc7e2cc90fef00cffc94ade9ac cpio-2.7-r1.ebuild 953
-RMD160 cc3c6c7640218f6c75d19643e522d9caca7de9de cpio-2.7-r1.ebuild 953
-SHA256 0604e25d4a23d82eadb4624ef39e6a76206a1000633f81d0fec66d6bae9f424c cpio-2.7-r1.ebuild 953
-MISC ChangeLog 8309 RMD160 8757f187b31e99fdc080d124b388792efa64c209 SHA1 9236de91c30cf1d889ce8d9bfb8c908a568f91bd SHA256 f858db0277bd31328efc0784b5fe0a13443311254d52b826421d2e32383f0146
-MD5 9341e276b277ab6195f446fdebdc2eee ChangeLog 8309
-RMD160 8757f187b31e99fdc080d124b388792efa64c209 ChangeLog 8309
-SHA256 f858db0277bd31328efc0784b5fe0a13443311254d52b826421d2e32383f0146 ChangeLog 8309
+EBUILD cpio-2.6-r5.ebuild 1622 RMD160 c5164a212842a78322feabec9b65d2178e897264 SHA1 a5df2ecea2255cd701aa7486fcf53bb55dd33113 SHA256 bcbb7a3cf07c5e428ca06fcdf7622a12b8ae97208055f26cf342cbe12c3367ab
+MD5 d6134574633787839c2f1a1ffad0b139 cpio-2.6-r5.ebuild 1622
+RMD160 c5164a212842a78322feabec9b65d2178e897264 cpio-2.6-r5.ebuild 1622
+SHA256 bcbb7a3cf07c5e428ca06fcdf7622a12b8ae97208055f26cf342cbe12c3367ab cpio-2.6-r5.ebuild 1622
+EBUILD cpio-2.7-r1.ebuild 945 RMD160 ab8224f462610f3e4116d4bdc5af951f4bba2555 SHA1 a86b2de6bee6868d0a0744bf0e44bd6e088da076 SHA256 b2a564e85bd5c76927c21469906198da3424284d8f54dbf4647993080155b6bf
+MD5 502532a83541d2f87f50f8aaa6626dc5 cpio-2.7-r1.ebuild 945
+RMD160 ab8224f462610f3e4116d4bdc5af951f4bba2555 cpio-2.7-r1.ebuild 945
+SHA256 b2a564e85bd5c76927c21469906198da3424284d8f54dbf4647993080155b6bf cpio-2.7-r1.ebuild 945
+MISC ChangeLog 8567 RMD160 ad146aae7bc0d34c9c0cd1abe7fc0c28028f0dd1 SHA1 5afa2d566367b39d8b749d5a080af847e804add4 SHA256 adf6afc4a15cda37bd81b7346f728eb414583bcbcb162f076dedb66de690c1e0
+MD5 a00d9273c549b25adaf87dfdac1daa48 ChangeLog 8567
+RMD160 ad146aae7bc0d34c9c0cd1abe7fc0c28028f0dd1 ChangeLog 8567
+SHA256 adf6afc4a15cda37bd81b7346f728eb414583bcbcb162f076dedb66de690c1e0 ChangeLog 8567
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
